--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 </div>
 <div class="section--two">
       <div class="container--one">
-        <img class="container--one__image"   src="mandi.jpg">
+        <img class="container--one__image"   src="Mandi.jpg">
         <p class="container--one__desc" >Welcome to Mandi Hotel, where comfort meets luxury.Experience peaceful stays and delicious dining in every visit.</p> 
          <button class="container--one__button" >Order Now</button>
       </div>
       <div class="container--two">
-         <img class="container--two__image"  src="tandoori.jpg">
+         <img class="container--two__image"  src="Tandoori.jpg">
          <p  class="container--two__desc" >Welcome to Tandoori Hotel, where every bite is packed with flavor.Enjoy tandoori  made with love and tradition.</p> 
          <button class="container--two__button" >Order Now</button>
       </div>
@@ -78,4 +78,5 @@
 
 </div>
 </body>
+
 </html>
